--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </div>
         <div class="flex-item">
           <p class="address">
-            Come contattare Marco Sanson
+            Marco Sanson
           </p>
         </div>
         <div class="flex-item contacts">
@@ -68,6 +68,7 @@
           <a href="https://www.linkedin.com/in/marcosanson/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-linkedin"></i></a>
           <a href="https://www.facebook.com/marcosanson/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-facebook"></i></a>
           <a href="https://www.instagram.com/marcosanson" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i></a>
+          <a href="https://twitter.com/marcosanson" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-twitter"></i></a>
         </div>
       </div>
     </div>
