--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
           <p class="address">
             Marco Sanson
           </p>
+          <p class="email">
+            marco.sanson [at] gmail.com
+          </p>
         </div>
         <div class="flex-item contacts">
           <a href="tel:+393488111093" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-phone"></i></a>
